--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -28,4 +28,11 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{secrets.ACR_NAME}}/contoso-website:latest 
+          tags: ${{secrets.ACR_NAME}}/contoso-website:latest
+          
+  deploy:
+    runs-on: ubuntu-20.04
+    needs: build_push_image # Will wait for the execution of the previous job    
+    
+    steps: 
+      - uses: actions/checkout@v2
