--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -36,3 +36,16 @@ jobs:
     
     steps: 
       - uses: actions/checkout@v2
+      
+      - name: Helm tool installer
+        uses: Azure/setup-helm@v1
+        with:
+          # Version of helm
+          version: v3.3.1 # default is latest
+          
+      - name: Azure Kubernetes set context
+        uses: Azure/aks-set-context@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          resource-group: mslearn-gh-pipelines-20132
+          cluster-name: contoso-video
