--- a/.github/workflows/build-production.yml
+++ b/.github/workflows/build-production.yml
@@ -54,7 +54,7 @@ jobs:
           # AKS cluster name
           cluster-name: contoso-video
 
-      - name: Run Helm Deploy
+      - name: Run Helm Deploy # --set dns.name=${{ secrets.DNS_NAME }}
         run: |
           helm upgrade \
             --install \
@@ -64,7 +64,6 @@ jobs:
             --namespace production \
             contoso-website \
             ./kubernetes/contoso-website \
-            --set image.repository=${{ secrets.ACR_NAME }} \
-            --set dns.name=${{ secrets.DNS_NAME }}
+            --set image.repository=${{ secrets.ACR_NAME }} \            
             --set image.tag=${GITHUB_REF##*/}
 
